# mandelbrot

./: .gitignore  README.md  main.cpp
Non-Optimized/: CMakeLists.txt  main.cpp
Non-Optimized/include/: mandelbrot.h
Non-Optimized/src/: mandelbrot.cpp
Optimized/: CMakeLists.txt
Optimized/include/: mandelbrot.h
Optimized/src/: mandelbrot.cpp
include/: mandelbrot.h
mandelbrot/: main.cpp  mandelbrot.cpp
src/: mandelbrot.cpp
